mik-sdk-macros/tests/ui/response/error_missing_status.stderr
error: Missing required 'status' field in error! macro.

       The error! macro requires at minimum a status code:
       error! {{ status: 404 }}

       Full example:
       error! {{
       status: 404,
       title: "Not Found",
       detail: "User not found"
       }}
 --> tests/ui/response/error_missing_status.rs:5:17
  |
5 |       let _resp = error! {
  |  _________________^
6 | |         title: "Not Found",
7 | |     };
  | |_____^
  |
  = note: this error originates in the macro `error` (in Nightly builds, run with -Z macro-backtrace for more info)
