mik-sdk-macros/tests/ui/response/error_missing_status.rs
use mik_sdk_macros::error;

// Error: error! macro requires 'status' field
fn main() {
    let _resp = error! {
        title: "Not Found",
    };
}
